# big_honey_bot

./: .gitignore  Dockerfile  Procfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.py
big_honey_bot/: helpers.py  main.py
big_honey_bot/config/: helpers.py  main.py
big_honey_bot/events/: helpers.py  main.py
big_honey_bot/games/: helpers.py  main.py
big_honey_bot/main/: big_honey_bot.py  events.py  threads.py
big_honey_bot/playoffs/: helpers.py
big_honey_bot/sidebar/: helpers.py
big_honey_bot/threads/: helpers.py  main.py  models.py
bots/: manage_events_bot.py  new_gists.py  new_thread_bot.py  thread_handler_bot.py
data/: all_events.json  all_events.py  schedule_scrape_output.json
data/static/: data.py
events/: google_service.py  manager.py
handle_gists/: gists.py
playoffs/: playoff_data.py
schedule/: create_events.py  schedule_scrape.py
sidebar/: update_sidebar.py
threads/game/: game_thread.py  lineup_injury_odds.py
threads/off_day/: off_day.py  static_events.py
threads/post_game/: game_status_check.py  nbacom_boxscore_scrape.py  post_game.py  post_game_headlines.json  thread_stats.py
threads/static/: headlines.py  headlines_playoffs.py  templates.py
tools/: console.py  helpers.py  models.py  toolkit.py
tools/generate_schedule/: OPT_create_offday_playoffs.py  STEP1_schedule_scrape.py  STEP2_create_events.py  STEP3_create_calendar.py  STEP3_create_gist.py  create_events.py  create_gist.py  playoff_offdays.py  schedule_scrape.py
tools/json_output/: all_events.json
(+10 files in other folders)
